update company logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container" *ngIf="!showImage">
   <div class="logo-container">
-    <img src="https://bcare.com.sa/assets/imgs/bcare-logo.svg" height="80px" width="80px" alt="company-logo">
+    <img src="../assets/istockphoto-178447404-612x612.jpg" height="80px" width="80px" alt="company-logo">
   </div>
 
   <div class="form-container" >
