--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,31 +1,32 @@
 :host {
   display: block;
-  height: 100vh;
+  color: #146394;
+
 }
 .container {
-  background-color:black;
+  background-color:white;
   width: clamp(40px, 100%, 500px);
   margin: auto;
-  border: 3px solid grey;
   padding: 10px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
   border-radius: 20px;
   position: relative;
   z-index: 999999999;
   top: 10px;
+  height: 100vh;
+  font-weight:"Reem Kufi", sans-serif;
 }
-.container.generatedImage {
-    width: 400px;
-    height: 600px;
-}
+
 .logo-container {
     display: flex;
-    justify-content: end;
+    justify-content: center;
+}
+.logo-container img {
+    max-width: 250px;
+    max-height: 250px;
 }
 
 .form-container {
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.25);
 }
 label {
     font-weight: bold;
@@ -39,16 +40,14 @@ input[type="text"]
     padding: 10px;
     margin-bottom: 20px;
     border: none;
-    border-radius: 15px;
     width: 100%;
+    border: 1px solid gainsboro;
 }
 
  button {
-    width: 100%;
-    padding: 12px;
+    padding: 10px 15px;
     border: none;
-    border-radius: 15px;
-    background-color: #5e5e5e;
+    background-color: #146394;
     color: white;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -65,40 +64,34 @@ button[type="submit"]:hover {
 }
 
 .image-container {
-    width: 380px;
-    height: 580px;
     position: relative;
+    width: 900px;
+    height: 1600px;
+    background-image: url('../assets/28a4641e-d3d2-4c09-b43f-d36ac9321014.jpg');
+    background-size: 100% 100%;
+    z-index: -1;
 }
 
 .text {
     position: absolute;
-    top: 123px;
+    top: 68%;
     display: flex;
     justify-content: center;
-    font-size: 20px;
-    width: calc(100% - 202px);
-    left: 101px;
-    height: 61px;
+    font-size: 40px;
+    left: 0;
     align-items: center;
     flex-wrap: wrap;
     text-align: center;
     text-wrap: wrap;
+    width: 100%;
+    color: white;
 }
 
-.buttons-section {
+p {
+    margin:0;
+    padding: 0;
+}
+.btn-sec {
     display: flex;
-    justify-content: center;
-    width: clamp(40px, 100%, 500px);
-    margin: auto;
-    position: relative;
-    z-index: 99999999999999;
-}
-.buttons-section button {
-    margin: 20px  10px 0;
-}
-
-@media screen and (max-width: 400px) {
-    .image-container {
-        width: 100%;
-    }
+    justify-content: end;
 }
