--- a/src/styles.css
+++ b/src/styles.css
@@ -1,97 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 * {
     box-sizing: border-box;
-    font-family: "Reem Kufi", sans-serif;
+    font-family: "Cairo", sans-serif;
 }
-body {
-    padding: 0;
-    margin: 0;
-    background: linear-gradient(#0d0d0d, #212121);
-    color: #d6dfed;
-    
-  }
-  
+
   html,
   body {
     height: 100%;
-  }
-  
-  .background {
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-  }
-  
-  ul {
-    display: flex;
-    list-style: none;
     padding: 0;
     margin: 0;
+    overflow: hidden;
   }
   
-  .socials {
-    gap: 20px;
-  }
-  
-  .socials a {
-    font-size: 24px;
-  }
-  
-  .links {
-    gap: 10px;
-    flex-direction: column;
-  }
-  
-  .legal {
-    font-size: 12px;
-    margin: 0;
-  }
-  
-  svg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: scaleY(3) scaleX(2.25);
-    transform-origin: bottom;
-    box-sizing: border-box;
-    display: block;
-    pointer-events: none;
-  }
-  
-  footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    display: flex;
-    width: 100%;
-    height: 370px;
-  }
-  
-  section {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    gap: 30px;
-    padding-bottom: 60px;
-    padding-left: 60px;
-    width: 100%;
-  }
-  
-  @media (width > 420px) {
-    section {
-      align-items: center;
-      padding-left: 0;
-      gap: 20px;
-    }
-  
-    .links {
-      gap: 20px;
-      flex-direction: row;
-    }
-  }
   
