--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -74,10 +74,10 @@ button[type="submit"]:hover {
 
 .text {
     position: absolute;
-    top: 68%;
+    top: 71%;
     display: flex;
     justify-content: center;
-    font-size: 40px;
+    font-size: 60px;
     left: 0;
     align-items: center;
     flex-wrap: wrap;
@@ -85,6 +85,8 @@ button[type="submit"]:hover {
     text-wrap: wrap;
     width: 100%;
     color: white;
+    font-family: "Lalezar", system-ui !important;
+    font-weight: bold;
 }
 
 p {
