--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -86,7 +86,7 @@ button[type="submit"]:hover {
     width: 100%;
     color: white;
     font-family: "Lalezar", system-ui !important;
-    font-weight: bold;
+    font-weight: 700;
 }
 
 p {
