--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -13,7 +13,6 @@
   z-index: 999999999;
   top: 10px;
   height: 100vh;
-  font-weight:"Reem Kufi", sans-serif;
 }
 
 .logo-container {
@@ -81,7 +80,7 @@ input[type="text"]
     text-wrap: wrap;
     width: 100%;
     color: white;
-    font-family: "Lalezar", system-ui !important;
+    font-weight: bold;
 }
 
 p {
